Initial Skills Page Addition

--- a/pages/skills/index.html
+++ b/pages/skills/index.html
@@ -3,8 +3,8 @@
 
 <head>
 	<title>Portfolio</title>
-	<link rel="stylesheet" href=".\assets\vendor\bootstrap-4.1.1-dist\css\bootstrap.min.css">
-	<link rel="stylesheet" href=".\assets\css\style.css">
+	<link rel="stylesheet" href="/assets/vendor/bootstrap-4.1.1-dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -45,11 +45,11 @@
 			</div>
 			<div class="collapse navbar-collapse pr-5" id="navBarTop">
 			    <ul class="navbar-nav ml-auto ">
-			      <li class="nav-item active">
+			      <li class="nav-item">
 			        <a class="nav-link" href="#">About</a>
 			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" href="/pages/skills/">Skills</a>
+			      <li class="nav-item active">
+			        <a class="nav-link" href="#">Skills</a>
 			      </li>
 			      <li class="nav-item">
 			        <a class="nav-link" href="#">Qualifications</a>
@@ -66,7 +66,7 @@
 
 		<!-- Start: Main -->
 		<div id="mainBodyContent">
-		
+			<h1> Hello There </h1>
 		</div>
 		<!-- End: Main -->
 		
@@ -79,9 +79,9 @@
 		<!-- E2-end-NavBar -->
 
 		<!--Start: Scripts -->
-		<script src=".\assets\vendor\jquery-3.3.1\jquery-3.3.1.min.js"></script>
-		<script src=".\assets\vendor\bootstrap-4.1.1-dist\js\bootstrap.min.js"></script>
-		<script src=".\assets\js\handler.js"></script>
+		<script src="/assets/vendor/jquery-3.3.1/jquery-3.3.1.min.js"></script>
+		<script src="/assets/vendor/bootstrap-4.1.1-dist/js/bootstrap.min.js"></script>
+		<script src="/assets/js/handler.js"></script>
 		<!-- End: Scripts -->
 </body>
 </html>
