Initial Commit for other html files

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
 	<title>Portfolio</title>
-	<link rel="stylesheet" href=".\assets\vendor\bootstrap-4.1.1-dist\css\bootstrap.min.css">
-	<link rel="stylesheet" href=".\assets\css\style.css">
+	<link rel="stylesheet" href="/assets/vendor/bootstrap-4.1.1-dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
 </head>
 
 <body>
@@ -46,19 +47,19 @@
 			<div class="collapse navbar-collapse pr-5" id="navBarTop">
 			    <ul class="navbar-nav ml-auto ">
 			      <li class="nav-item active">
-			        <a class="nav-link" href="#">About</a>
+			        <a class="nav-link" href="/">About</a>
 			      </li>
 			      <li class="nav-item">
 			        <a class="nav-link" href="/pages/skills/">Skills</a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="#">Qualifications</a>
+			        <a class="nav-link" href="/pages/qualifications">Qualifications</a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="#">Internships</a>
+			        <a class="nav-link" href="/pages/internships">Internships</a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="#">Work History</a>
+			        <a class="nav-link" href="/pages/workhistory">Work History</a>
 			      </li>
 			    </ul>
 			</div>
@@ -66,8 +67,10 @@
 
 		<!-- Start: Main -->
 		<div id="mainBodyContent">
-		
+			
+			<h2> Hello There</h2>		
 		</div>
+
 		<!-- End: Main -->
 		
 		<!-- E2-end-NavBar -->
@@ -79,9 +82,9 @@
 		<!-- E2-end-NavBar -->
 
 		<!--Start: Scripts -->
-		<script src=".\assets\vendor\jquery-3.3.1\jquery-3.3.1.min.js"></script>
-		<script src=".\assets\vendor\bootstrap-4.1.1-dist\js\bootstrap.min.js"></script>
-		<script src=".\assets\js\handler.js"></script>
+		<script src="/assets/vendor/jquery-3.3.1/jquery-3.3.1.min.js"></script>
+		<script src="/assets/vendor/bootstrap-4.1.1-dist/js/bootstrap.min.js"></script>
+		<script src="/assets/js/handler.js"></script>
 		<!-- End: Scripts -->
 </body>
 </html>
