--- a/pages/qualifications/index.html
+++ b/pages/qualifications/index.html
@@ -48,10 +48,10 @@
 			      <li class="nav-item">
 			        <a class="nav-link" href="/">About</a>
 			      </li>
-			      <li class="nav-item active">
+			      <li class="nav-item">
 			        <a class="nav-link" href="/pages/skills/">Skills</a>
 			      </li>
-			      <li class="nav-item">
+			      <li class="nav-item active">
 			        <a class="nav-link" href="/pages/qualifications">Qualifications</a>
 			      </li>
 			      <li class="nav-item">
@@ -66,7 +66,7 @@
 
 		<!-- Start: Main -->
 		<div id="mainBodyContent">
-			<h1> Skills </h1>
+			<h1> qualifications </h1>
 		</div>
 		<!-- End: Main -->
 		
