--- a/pages/workhistory/index.html
+++ b/pages/workhistory/index.html
@@ -48,7 +48,7 @@
 			      <li class="nav-item">
 			        <a class="nav-link" href="/">About</a>
 			      </li>
-			      <li class="nav-item active">
+			      <li class="nav-item">
 			        <a class="nav-link" href="/pages/skills/">Skills</a>
 			      </li>
 			      <li class="nav-item">
@@ -57,7 +57,7 @@
 			      <li class="nav-item">
 			        <a class="nav-link" href="/pages/internships">Internships</a>
 			      </li>
-			      <li class="nav-item">
+			      <li class="nav-item active">
 			        <a class="nav-link" href="/pages/workhistory">Work History</a>
 			      </li>
 			    </ul>
@@ -66,7 +66,7 @@
 
 		<!-- Start: Main -->
 		<div id="mainBodyContent">
-			<h1> Skills </h1>
+			<h1> Work History </h1>
 		</div>
 		<!-- End: Main -->
 		
