About Page Mostly Done; Added Roboto Font for body, Made Signatue linked to About from every Page, Added Avatar Image

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 	<link rel="stylesheet" href="/assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Work+Sans:900" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body>
 		<!-- E1-Start-NavBar-->
 		<nav class="navbar navbar-expand-lg navbar-light">
-			<a class="navbar-brand pt-3" href="#">
+			<a class="navbar-brand pt-3" href="/">
 					<font class="font-weight-bold" face="Sacramento">
 						<h2><b>Rishi Gupta</b></h2>
 					</font>
@@ -25,7 +26,7 @@
 
 			<!-- Links -->
 			<div class="collapse navbar-collapse ml-2" id="navBarSocialMedia">   
-			    <div class="vertical-divider hidden-xsx`"></div>
+			    <div class="vertical-divider hidden-xs"></div>
 			    <ul class="navbar-nav mr-auto">
 					<li class="nav-item active">
 				        <a class="nav-link" href="https://github.com/rgpt"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
@@ -67,8 +68,22 @@
 
 		<!-- Start: Main -->
 		<div id="mainBodyContent">
-			
-			<h2> Hello There</h2>		
+				<div class="container-fluid mt-5" style="background-color: #2E3747;">
+					<div class="float-left ml-5 mr-3 mt-5">
+						<h2 class="headTopic"> Hi There !</h2>	
+						<div class="horizontal-divider hidden-xs"></div>
+						<p class="mt-4"> <b>
+							My name is <font color="red">Rishi</font>. I make things for money and for fun.<br/>
+							I am a Product Engineer, Designer and a wanderer. <br/>
+							I want to work on exciting cutting edge technologies.
+						</b></p>
+					</div>	
+					<div class="float-right pb-5 mr-5" style="width:35%;height:auto" >
+							<img class="img-thumbnail" src="/assets/img/avatar.png" class="rounded float-right" alt="Rishi's 
+						Picture">
+					</div>
+				</div>
+
 		</div>
 
 		<!-- End: Main -->
