--- a/pages/workhistory/index.html
+++ b/pages/workhistory/index.html
@@ -7,12 +7,13 @@
 	<link rel="stylesheet" href="/assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body>
 		<!-- E1-Start-NavBar-->
 		<nav class="navbar navbar-expand-lg navbar-light">
-			<a class="navbar-brand pt-3" href="#">
+			<a class="navbar-brand pt-3" href="/">
 					<font class="font-weight-bold" face="Sacramento">
 						<h2><b>Rishi Gupta</b></h2>
 					</font>
