Added skills and qualifications tab, added images for the skills tab and used Progress bar plugin for progress bar

--- a/pages/qualifications/index.html
+++ b/pages/qualifications/index.html
@@ -5,6 +5,7 @@
 	<title>Portfolio</title>
 	<link rel="stylesheet" href="/assets/vendor/bootstrap-4.1.1-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/assets/css/style.css">
+	<link rel="stylesheet" href="/assets/css/timeline.css">
 	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -67,7 +68,70 @@
 
 		<!-- Start: Main -->
 		<div id="mainBodyContent">
-			<h1> qualifications </h1>
+			
+
+			<div class="container">
+			    <ul class="timeline">
+			        <li>
+			          <div class="timeline-badge"><i class="fa fa-graduation-cap" aria-hidden="true"></i></div>
+			          <div class="timeline-panel">
+			            <div class="timeline-heading">
+			              <h2 class="timeline-title"><b>B.Tech - 2017</b></h2>
+			              <hr/>
+			            </div>
+			            <div class="timeline-body">
+			              <p>
+			              	<a href="https://www.lnmiit.ac.in/"><b>The LNM Institute of Information Technology</b></a><br/>
+			              	<b>CGPA : </b>8.71/10<br/>
+			              	<b>Stream : </b>Communication and Computer Engineering<br/>
+			              </p>
+			            </div>
+			          </div>
+			        </li>
+			        <li class="timeline-inverted">
+			          <div class="timeline-badge"><i class="fa fa-graduation-cap" aria-hidden="true"></i></div>
+			          <div class="timeline-panel">
+			            <div class="timeline-heading">
+			              <h2 class="timeline-title"><b>Class XII - 2013</b></h2>
+			              <hr/>
+			            </div>
+			            <div class="timeline-body">
+			           		<p>
+		              	  		<a href="http://caambabari.org"><b>Central Academy Senior Secondary School</b></a><br/>
+			              		<b>Percentage : </b>89% (C.B.S.E)<br/>
+			              		<b>Stream : </b>Science<br/>
+			              	</p>
+			            </div>
+			          </div>
+			        </li>
+			        <li>
+			          <div class="timeline-badge"><i class="fa fa-graduation-cap" aria-hidden="true"></i></div>
+			          <div class="timeline-panel">
+			            <div class="timeline-heading">
+			              <h2 class="timeline-title"><b>Class X - 2011</b></h2>
+			              <hr/>
+			            </div>
+			            <div class="timeline-body">
+			              <p>
+			              	<a href="http://caambabari.org"><b>Central Academy Senior Secondary School</b></a>
+			              	<b>CGPA : </b>8.8/10 (C.B.S.E)<br/>
+			              	<b>Stream : </b>Science<br/>
+			              </p>
+			            </div>
+			          </div>
+			        </li>
+			    </ul>
+			</div>
+
+
+
+
+
+
+
+
+
+
 		</div>
 		<!-- End: Main -->
 		
