--- a/pages/skills/index.html
+++ b/pages/skills/index.html
@@ -5,6 +5,7 @@
 	<title>Portfolio</title>
 	<link rel="stylesheet" href="/assets/vendor/bootstrap-4.1.1-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/assets/css/style.css">
+	<link rel="stylesheet" href="/assets/css/pie.css">
 	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -67,7 +68,17 @@
 
 		<!-- Start: Main -->
 		<div id="mainBodyContent">
-			<h1> Skills </h1>
+			<div class="container-fluid">
+				<div class="row">
+					<div class="ml-5 mt-4" id="skill1"></div>
+					<div class="ml-5 mt-4" id="skill2"></div>
+					<div class="ml-5 mt-4" id="skill3"></div>
+					<div class="ml-5 mt-4" id="skill4"></div>
+					<div class="ml-5 mt-4" id="skill5"></div>
+					<div class="ml-5 mt-4" id="skill6"></div>
+					<div class="ml-5 mt-4" id="skill7"></div>
+				</div>
+			</div>
 		</div>
 		<!-- End: Main -->
 		
@@ -82,6 +93,7 @@
 		<!--Start: Scripts -->
 		<script src="/assets/vendor/jquery-3.3.1/jquery-3.3.1.min.js"></script>
 		<script src="/assets/vendor/bootstrap-4.1.1-dist/js/bootstrap.min.js"></script>
+		<script src="/assets/vendor/progressbar/progressbar.min.js"></script>
 		<script src="/assets/js/handler.js"></script>
 		<!-- End: Scripts -->
 </body>
