added resume download button with pdf, modified google+ url, Added workHistory

--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -7,7 +7,6 @@
 	<link rel="stylesheet" href="/assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Work+Sans:900" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
@@ -26,28 +25,28 @@
 
 			<!-- Links -->
 			<div class="collapse navbar-collapse ml-2" id="navBarSocialMedia">   
-			    <div class="vertical-divider hidden-xs"></div>
+			    <div class="vertical-divider hidden-xsx`"></div>
 			    <ul class="navbar-nav mr-auto">
 					<li class="nav-item active">
-				        <a class="nav-link" href="https://github.com/rgpt" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+				        <a class="nav-link" href="https://github.com/rgpt"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
 				    </li>
 					<li class="nav-item active">
-				        <a class="nav-link" href="https://www.linkedin.com/in/rishigupta95" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+				        <a class="nav-link" href="https://www.linkedin.com/in/rishigupta95"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
 				    </li>
 					<li class="nav-item active">
-				        <a class="nav-link" target="_top" href="mailto:rishigpt2009@gmail.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+				        <a class="nav-link" target="_top" href="mailto:rishigpt2009@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
 				    </li>
 					<li class="nav-item active">
-				        <a class="nav-link" href="https://plus.google.com/+RishiGupta_rgpt" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+				        <a class="nav-link" href="https://plus.google.com/+RishiGupta_rgpt"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
 				    </li>
 				    <li class="nav-item active">
-				        <a class="nav-link" href="https://www.facebook.com/03rishi" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+				        <a class="nav-link" href="https://www.facebook.com/03rishi"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 				    </li>
 			   </ul>
 			</div>
 			<div class="collapse navbar-collapse pr-5" id="navBarTop">
 			    <ul class="navbar-nav ml-auto ">
-			      <li class="nav-item active">
+			      <li class="nav-item">
 			        <a class="nav-link" href="/">About</a>
 			      </li>
 			      <li class="nav-item">
@@ -58,9 +57,9 @@
 			      </li>
 			      <li class="nav-item">
 			        <a class="nav-link" href="/pages/workhistory">Work History</a>
-			      </li>	
-			      <!-- <li class="nav-item">
-			        <a class="nav-link" href="/pages/projects">Projects</a>
+			      </li>
+			      <!-- <li class="nav-item active">
+			      	<a class="nav-link" href="/pages/projects">Projects</a>
 			      </li> -->
 			    </ul>
 			</div>
@@ -68,28 +67,8 @@
 
 		<!-- Start: Main -->
 		<div id="mainBodyContent">
-				<div class="container-fluid mt-5" style="background-color: #2E3747;">
-					<div class="float-left ml-5 mr-3 mt-5">
-						<h2 class="headTopic"> Hi There !</h2>	
-						<div class="horizontal-divider hidden-xs"></div>
-						<p class="mt-4"> <b>
-							My name is <font color="red">Rishi</font>. I make things for money and for fun.<br/>
-							I am a Product Engineer, Designer and a wanderer. <br/>
-							I want to work on exciting cutting edge technologies.
-						</b></p>
-						<a href="/RISHI_Resume.pdf" target="_balnk" class="btn download-btn">
-							<i class="fa fa-download" style="color: white"></i>
-							Resume
-						</a>
-					</div>	
-					<div class="float-right pb-5 mr-5" style="width:35%;height:auto" >
-							<img class="img-thumbnail" src="/assets/img/avatar.png" class="rounded float-right" alt="Rishi's 
-						Picture">
-					</div>
-				</div>
-
+			<h1> Projects </h1>
 		</div>
-
 		<!-- End: Main -->
 		
 		<!-- E2-end-NavBar -->
