--- a/pages/qualifications/index.html
+++ b/pages/qualifications/index.html
@@ -38,7 +38,7 @@
 				        <a class="nav-link" target="_top" href="mailto:rishigpt2009@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
 				    </li>
 					<li class="nav-item active">
-				        <a class="nav-link" href="https://plus.google.com/+RishiGupta"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+				        <a class="nav-link" href="https://plus.google.com/+RishiGupta_rgpt"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
 				    </li>
 				    <li class="nav-item active">
 				        <a class="nav-link" href="https://www.facebook.com/03rishi"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -57,11 +57,11 @@
 			        <a class="nav-link" href="/pages/qualifications/">Qualifications</a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="/pages/internships/">Internships</a>
-			      </li>
-			      <li class="nav-item">
 			        <a class="nav-link" href="/pages/workhistory/">Work History</a>
 			      </li>
+			      <!-- <li class="nav-item">
+			        <a class="nav-link" href="/pages/projects">Projects</a>
+			      </li> -->
 			    </ul>
 			</div>
 		</nav>
@@ -69,7 +69,6 @@
 		<!-- Start: Main -->
 		<div id="mainBodyContent">
 			
-
 			<div class="container">
 			    <ul class="timeline">
 			        <li>
@@ -82,7 +81,7 @@
 			            <div class="timeline-body">
 			              <p>
 			              	<a href="https://www.lnmiit.ac.in/"><b>The LNM Institute of Information Technology</b></a><br/>
-			              	<b>CGPA : </b>8.71/10<br/>
+			              	<b>CGPA : </b><font color="red">8.71</font>/10<br/>
 			              	<b>Stream : </b>Communication and Computer Engineering<br/>
 			              </p>
 			            </div>
@@ -98,7 +97,7 @@
 			            <div class="timeline-body">
 			           		<p>
 		              	  		<a href="http://caambabari.org"><b>Central Academy Senior Secondary School</b></a><br/>
-			              		<b>Percentage : </b>89% (C.B.S.E)<br/>
+			              		<b>Percentage : </b><font color="red">89%</font> (C.B.S.E)<br/>
 			              		<b>Stream : </b>Science<br/>
 			              	</p>
 			            </div>
@@ -114,7 +113,7 @@
 			            <div class="timeline-body">
 			              <p>
 			              	<a href="http://caambabari.org"><b>Central Academy Senior Secondary School</b></a>
-			              	<b>CGPA : </b>8.8/10 (C.B.S.E)<br/>
+			              	<b>CGPA : </b><font color="red">8.8</font>/10 (C.B.S.E)<br/>
 			              	<b>Stream : </b>Science<br/>
 			              </p>
 			            </div>
@@ -122,15 +121,6 @@
 			        </li>
 			    </ul>
 			</div>
-
-
-
-
-
-
-
-
-
 
 		</div>
 		<!-- End: Main -->
