--- a/pages/skills/index.html
+++ b/pages/skills/index.html
@@ -38,7 +38,7 @@
 				        <a class="nav-link" target="_top" href="mailto:rishigpt2009@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
 				    </li>
 					<li class="nav-item active">
-				        <a class="nav-link" href="https://plus.google.com/+RishiGupta"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+				        <a class="nav-link" href="https://plus.google.com/+RishiGupta_rgpt"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
 				    </li>
 				    <li class="nav-item active">
 				        <a class="nav-link" href="https://www.facebook.com/03rishi"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -57,26 +57,27 @@
 			        <a class="nav-link" href="/pages/qualifications/">Qualifications</a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="/pages/internships/">Internships</a>
-			      </li>
-			      <li class="nav-item">
 			        <a class="nav-link" href="/pages/workhistory/">Work History</a>
 			      </li>
+			      <!-- <li class="nav-item">
+			        <a class="nav-link" href="/pages/projects/">Projects</a>
+			      </li> -->
 			    </ul>
 			</div>
 		</nav>
 
 		<!-- Start: Main -->
 		<div id="mainBodyContent">
-			<div class="container-fluid">
+			<div class="container-fluid mt-">
 				<div class="row">
-					<div class="ml-5 mt-4" id="skill1"></div>
-					<div class="ml-5 mt-4" id="skill2"></div>
-					<div class="ml-5 mt-4" id="skill3"></div>
-					<div class="ml-5 mt-4" id="skill4"></div>
-					<div class="ml-5 mt-4" id="skill5"></div>
-					<div class="ml-5 mt-4" id="skill6"></div>
-					<div class="ml-5 mt-4" id="skill7"></div>
+					<div class="ml-5 mt-5" id="skill1"></div>
+					<div class="ml-5 mt-5" id="skill2"></div>
+					<div class="ml-5 mt-5" id="skill3"></div>
+					<div class="ml-5 mt-5" id="skill4"></div>
+					<div class="ml-5 mt-5" id="skill5"></div>
+					<div class="ml-5 mt-5" id="skill6"></div>
+					<div class="ml-5 mt-5" id="skill7"></div>
+					<div class="ml-5 mt-5" id="skill8"></div>
 				</div>
 			</div>
 		</div>
