--- a/pages/workhistory/index.html
+++ b/pages/workhistory/index.html
@@ -5,6 +5,7 @@
 	<title>Portfolio</title>
 	<link rel="stylesheet" href="/assets/vendor/bootstrap-4.1.1-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/assets/css/style.css">
+	<link rel="stylesheet" href="/assets/css/timeline.css">
 	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -37,7 +38,7 @@
 				        <a class="nav-link" target="_top" href="mailto:rishigpt2009@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
 				    </li>
 					<li class="nav-item active">
-				        <a class="nav-link" href="https://plus.google.com/+RishiGupta"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+				        <a class="nav-link" href="https://plus.google.com/+RishiGupta_rgpt"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
 				    </li>
 				    <li class="nav-item active">
 				        <a class="nav-link" href="https://www.facebook.com/03rishi"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -55,19 +56,142 @@
 			      <li class="nav-item">
 			        <a class="nav-link" href="/pages/qualifications">Qualifications</a>
 			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" href="/pages/internships">Internships</a>
-			      </li>
 			      <li class="nav-item active">
 			        <a class="nav-link" href="/pages/workhistory">Work History</a>
 			      </li>
+			      <!-- <li class="nav-item">
+			        <a class="nav-link" href="/pages/projects">Projects</a>
+			      </li> -->
 			    </ul>
 			</div>
 		</nav>
 
 		<!-- Start: Main -->
 		<div id="mainBodyContent">
-			<h1> Work History </h1>
+			
+			<div class="container">
+			    <ul class="timeline">
+			        <li>
+			          <div class="timeline-badge">
+			          	<i class="fa fa-briefcase" aria-hidden="true"></i>
+			          </div>
+			          <div class="timeline-panel">
+			            <div class="timeline-heading">
+			              <h3 class="timeline-title"><b>SLK Software</b> (July’17-Present) </h3>
+			              <hr/>
+			            </div>
+			            <div class="timeline-body">
+			              <p>
+			              		<b>Location : </b> Bengaluru, India <br/>
+			              		<b>Job Type : </b>  Full Time <br/>
+			              		<ul class="mt-3">
+			              			<li>
+			              				Developing RPA product to automate repeated business logic which in turn acts as a catalyst in 
+										improving the productivity of any organization.
+			              			</li>
+			              			<li>
+										  My role is developing plugins for the RPA platform so as to automate several Enterprise 
+										  applications.  
+ 
+			              			</li>
+			              		</ul>
+			              </p>
+			            </div>
+			          </div>
+			        </li>
+			        <li class="timeline-inverted">
+			          <div class="timeline-badge">
+			          	<i class="fa fa-briefcase" aria-hidden="true"></i>
+			          </div>
+			          <div class="timeline-panel">
+			            <div class="timeline-heading">
+			              <h3 class="timeline-title"><b>SLK Software</b> (Jan-May’17) </h3>
+			              <hr/>
+			            </div>
+			            <div class="timeline-body">
+			           		<p>
+			           			<b>Location : </b> Bengaluru, India <br/>
+			           			<b>Job Type : </b> Internship <br/>
+			           			<ul class="mt-3">
+			           			 	<li>
+			           			 		Development of RPA (Robotic Process Automation) platform which automates mundane tasks.
+			           			 	</li>
+			           			 	<li> 
+			           			 		Contributed in developing Company’s own coding judge. 
+			           			 	</li>
+			           			</ul>
+			              	</p>
+			            </div>
+			          </div>
+			        </li>
+			        <li>
+			          <div class="timeline-badge">
+			          	<i class="fa fa-briefcase" aria-hidden="true"></i>
+			          </div>
+			          <div class="timeline-panel">
+			            <div class="timeline-heading">
+			              <h3 class="timeline-title"><b>Arcelor Mittal</b> (May-June’16 ) </h3>
+			              <hr/>
+			            </div>
+			            <div class="timeline-body">
+			           		<p>
+			           			<b>Location : </b> Temirtau, Kazakhstan<br/>
+			           			<b>Job Type : </b> Internship <br/>
+			           			<ul class="mt-3">
+			           				<li>
+			           					Building, developing and debugging of Network Infrastructure setup for medium sized business using technologies like Zentyal and flexible resource monitoring using Pandora FMS. Installed and configured devices like Cisco L3 Switch, Servers and wireless Access Point. 
+			           				</li>
+			           			</ul>
+			              	</p>
+			            </div>
+			          </div>
+			        </li>
+			        <li class="timeline-inverted">
+			          <div class="timeline-badge">
+			          	<i class="fa fa-briefcase" aria-hidden="true"></i>
+			          </div>
+			          <div class="timeline-panel">
+			            <div class="timeline-heading">
+			              <h3 class="timeline-title"><b>IIT Bhubaneswar</b> (May-July’15) </h3>
+			              <hr/>
+			            </div>
+			            <div class="timeline-body">
+			              <p>
+			              		<b>Location : </b> Bhubaneswar, India <br/>
+			              		<b>Job Type : </b> Internship <br/>
+			              		<ul class="mt-3">
+			              			<li>
+			              				Designed, developed and programmed various biomedical algorithms that detect the events in ECG signal. Integrated the above mentioned in an android application which acts as an alternative to costly ECG machines. 
+			              			</li>
+			              		</ul>
+			              </p>
+			            </div>
+			          </div>
+			        </li>
+			        <li>
+			          <div class="timeline-badge">
+			   				<i class="fa fa-briefcase" aria-hidden="true"></i>
+			          </div>
+			          <div class="timeline-panel">
+			            <div class="timeline-heading">
+			              <h3 class="timeline-title"><b>Logic Roots</b> (June-July’14) </h3>
+			              <hr/>
+			            </div>
+			            <div class="timeline-body">
+			              <p>
+			              		<b>Location : </b> Jaipur, India <br/>
+			              		<b>Job Type : </b> Internship <br/>
+			              		<ul class="mt-3">
+			              			<li>
+			              				Leverage existing game play and Graphic designs using AdobePhotoshop to improve the way kids learn Maths by creating interactive learning environments. 
+			              			</li>
+			              </p>
+			            </div>
+			          </div>
+			        </li>
+			    </ul>
+			</div>
+
 		</div>
 		<!-- End: Main -->
 		
