Added bitly shortened url

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							I am a Product Engineer, Designer and a wanderer. <br/>
 							I want to work on exciting cutting edge technologies.
 						</b></p>
-						<a href="/RISHI_Resume.pdf" target="_balnk" class="btn download-btn">
+						<a href="http://bit.ly/2LsQX7M" target="_balnk" class="btn download-btn">
 							<i class="fa fa-download" style="color: white"></i>
 							Resume
 						</a>
