Update : minor changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-		<!-- E1-Start-NavBar-->
+		<!--Start: Top-NavBar-->
 		<nav class="navbar navbar-expand-lg navbar-light">
 			<a class="navbar-brand pt-3" href="/">
 					<font class="font-weight-bold" face="Sacramento">
@@ -46,7 +46,7 @@
 			   </ul>
 			</div>
 			<div class="collapse navbar-collapse pr-5" id="navBarTop">
-			    <ul class="navbar-nav ml-auto ">
+			    <ul class="navbar-nav ml-auto">
 			      <li class="nav-item active">
 			        <a class="nav-link" href="/">About</a>
 			      </li>
@@ -65,6 +65,7 @@
 			    </ul>
 			</div>
 		</nav>
+		<!--End: Top-NavBar-->
 
 		<!-- Start: Main -->
 		<div id="mainBodyContent">
@@ -92,18 +93,17 @@
 
 		<!-- End: Main -->
 		
-		<!-- E2-end-NavBar -->
+		<!-- Start: footer-NavBar -->
 		<nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 			</button>
 		</nav>
-		<!-- E2-end-NavBar -->
+		<!-- End: footer-NavBar -->
 
 		<!--Start: Scripts -->
 		<script src="/assets/vendor/jquery-3.3.1/jquery-3.3.1.min.js"></script>
 		<script src="/assets/vendor/bootstrap-4.1.1-dist/js/bootstrap.min.js"></script>
-		<script src="/assets/js/handler.js"></script>
 		<!-- End: Scripts -->
 </body>
 </html>
