--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-		<!-- E1-Start-NavBar-->
+		<!--Start: Top-NavBar-->
 		<nav class="navbar navbar-expand-lg navbar-light">
 			<a class="navbar-brand pt-3" href="/">
 					<font class="font-weight-bold" face="Sacramento">
@@ -25,7 +25,7 @@
 
 			<!-- Links -->
 			<div class="collapse navbar-collapse ml-2" id="navBarSocialMedia">   
-			    <div class="vertical-divider hidden-xsx`"></div>
+			    <div class="vertical-divider hidden-xs"></div>
 			    <ul class="navbar-nav mr-auto">
 					<li class="nav-item active">
 				        <a class="nav-link" href="https://github.com/rgpt"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
@@ -45,7 +45,7 @@
 			   </ul>
 			</div>
 			<div class="collapse navbar-collapse pr-5" id="navBarTop">
-			    <ul class="navbar-nav ml-auto ">
+			    <ul class="navbar-nav ml-auto">
 			      <li class="nav-item">
 			        <a class="nav-link" href="/">About</a>
 			      </li>
@@ -64,6 +64,7 @@
 			    </ul>
 			</div>
 		</nav>
+		<!-- End: Top-NavBar -->
 
 		<!-- Start: Main -->
 		<div id="mainBodyContent">
@@ -71,13 +72,13 @@
 		</div>
 		<!-- End: Main -->
 		
-		<!-- E2-end-NavBar -->
+		<!-- Start: footer-NavBar -->
 		<nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 			</button>
 		</nav>
-		<!-- E2-end-NavBar -->
+		<!-- End: footer-NavBar -->
 
 		<!--Start: Scripts -->
 		<script src="/assets/vendor/jquery-3.3.1/jquery-3.3.1.min.js"></script>
