--- a/pages/qualifications/index.html
+++ b/pages/qualifications/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-		<!-- E1-Start-NavBar-->
+		<!--Start: Top-NavBar-->
 		<nav class="navbar navbar-expand-lg navbar-light">
 			<a class="navbar-brand pt-3" href="/">
 					<font class="font-weight-bold" face="Sacramento">
@@ -26,7 +26,7 @@
 
 			<!-- Links -->
 			<div class="collapse navbar-collapse ml-2" id="navBarSocialMedia">   
-			    <div class="vertical-divider hidden-xsx`"></div>
+			    <div class="vertical-divider hidden-xs"></div>
 			    <ul class="navbar-nav mr-auto">
 					<li class="nav-item active">
 				        <a class="nav-link" href="https://github.com/rgpt"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
@@ -65,6 +65,7 @@
 			    </ul>
 			</div>
 		</nav>
+		<!--End: Top-NavBar-->
 
 		<!-- Start: Main -->
 		<div id="mainBodyContent">
@@ -75,12 +76,16 @@
 			          <div class="timeline-badge"><i class="fa fa-graduation-cap" aria-hidden="true"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
-			              <h2 class="timeline-title"><b>B.Tech - 2017</b></h2>
+			              <h2 class="timeline-title">
+			              	<b>B.Tech - 2017</b>
+			              </h2>
 			              <hr/>
 			            </div>
 			            <div class="timeline-body">
 			              <p>
-			              	<a href="https://www.lnmiit.ac.in/"><b>The LNM Institute of Information Technology</b></a><br/>
+			              	<a href="https://www.lnmiit.ac.in/">
+			              		<b>The LNM Institute of Information Technology</b>
+			              	</a><br/>
 			              	<b>CGPA : </b><font color="red">8.71</font>/10<br/>
 			              	<b>Stream : </b>Communication and Computer Engineering<br/>
 			              </p>
@@ -96,7 +101,10 @@
 			            </div>
 			            <div class="timeline-body">
 			           		<p>
-		              	  		<a href="http://caambabari.org"><b>Central Academy Senior Secondary School</b></a><br/>
+		              	  		<a href="http://caambabari.org">
+		              	  			<b>Central Academy Senior Secondary School</b>
+		              	  		</a>
+		              	  		<br/>
 			              		<b>Percentage : </b><font color="red">89%</font> (C.B.S.E)<br/>
 			              		<b>Stream : </b>Science<br/>
 			              	</p>
@@ -112,7 +120,10 @@
 			            </div>
 			            <div class="timeline-body">
 			              <p>
-			              	<a href="http://caambabari.org"><b>Central Academy Senior Secondary School</b></a>
+			              	<a href="http://caambabari.org">
+			              		<b>Central Academy Senior Secondary School</b>
+			              	</a>
+			              	<br/>
 			              	<b>CGPA : </b><font color="red">8.8</font>/10 (C.B.S.E)<br/>
 			              	<b>Stream : </b>Science<br/>
 			              </p>
@@ -125,18 +136,17 @@
 		</div>
 		<!-- End: Main -->
 		
-		<!-- E2-end-NavBar -->
+		<!-- Start: footer-NavBar -->
 		<nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 			</button>
 		</nav>
-		<!-- E2-end-NavBar -->
+		<!-- End: footer-NavBar -->
 
 		<!--Start: Scripts -->
 		<script src="/assets/vendor/jquery-3.3.1/jquery-3.3.1.min.js"></script>
 		<script src="/assets/vendor/bootstrap-4.1.1-dist/js/bootstrap.min.js"></script>
-		<script src="/assets/js/handler.js"></script>
 		<!-- End: Scripts -->
 </body>
 </html>
