url in new tab, added README file

--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -28,22 +28,33 @@
 			    <div class="vertical-divider hidden-xs"></div>
 			    <ul class="navbar-nav mr-auto">
 					<li class="nav-item active">
-				        <a class="nav-link" href="https://github.com/rgpt"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+				        <a class="nav-link" href="https://github.com/rgpt" target="_blank">
+				        	<i class="fa fa-github-alt" aria-hidden="true"></i>
+				        </a>
 				    </li>
 					<li class="nav-item active">
-				        <a class="nav-link" href="https://www.linkedin.com/in/rishigupta95"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+				        <a class="nav-link" href="https://www.linkedin.com/in/rishigupta95" target="_blank">
+				        	<i class="fa fa-linkedin" aria-hidden="true"></i>
+				        </a>
 				    </li>
 					<li class="nav-item active">
-				        <a class="nav-link" target="_top" href="mailto:rishigpt2009@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+				        <a class="nav-link" target="_blank" href="mailto:rishigpt2009@gmail.com" target="_blank">
+				        	<i class="fa fa-envelope" aria-hidden="true"></i>
+				        </a>
 				    </li>
 					<li class="nav-item active">
-				        <a class="nav-link" href="https://plus.google.com/+RishiGupta_rgpt"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+				        <a class="nav-link" href="https://plus.google.com/+RishiGupta_rgpt" target="_blank">
+				        	<i class="fa fa-google-plus" aria-hidden="true"></i>
+				        </a>
 				    </li>
 				    <li class="nav-item active">
-				        <a class="nav-link" href="https://www.facebook.com/03rishi"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+				        <a class="nav-link" href="https://www.facebook.com/03rishi" target="_blank">
+				        	<i class="fa fa-facebook" aria-hidden="true"></i>
+				        </a>
 				    </li>
 			   </ul>
 			</div>
+			
 			<div class="collapse navbar-collapse pr-5" id="navBarTop">
 			    <ul class="navbar-nav ml-auto">
 			      <li class="nav-item">
