--- a/index.html
+++ b/index.html
@@ -43,11 +43,6 @@
 				        	<i class="fa fa-envelope" aria-hidden="true"></i>
 				        </a>
 				    </li>
-					<li class="nav-item active">
-				        <a class="nav-link" href="https://plus.google.com/+RishiGupta_rgpt" target="_blank">
-				        	<i class="fa fa-google-plus" aria-hidden="true"></i>
-				        </a>
-				    </li>
 				    <li class="nav-item active">
 				        <a class="nav-link" href="https://www.facebook.com/03rishi" target="_blank">
 				        	<i class="fa fa-facebook" aria-hidden="true"></i>
@@ -59,16 +54,29 @@
 			<div class="collapse navbar-collapse pr-5" id="navBarTop">
 			    <ul class="navbar-nav ml-auto">
 			      <li class="nav-item active">
-			        <a class="nav-link" href="/">About</a>
+			        <a class="nav-link" href="/">
+			        	About
+			        </a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="/pages/skills/">Skills</a>
+			        <a class="nav-link" href="/pages/skills/">
+			        	Skills
+			        </a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="/pages/qualifications">Qualifications</a>
+			        <a class="nav-link" href="/pages/qualifications">	
+			        	Qualifications
+			        </a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="/pages/workhistory">Work History</a>
+			        <a class="nav-link" href="/pages/workhistory">
+			        	Work History
+			    	</a>
+			      </li>
+			      <li class="nav-item">
+			        <a class="nav-link" href="/pages/achievements">
+			        	Achievements
+			    	</a>
 			      </li>	
 			      <!-- <li class="nav-item">
 			        <a class="nav-link" href="/pages/projects">Projects</a>
