--- a/pages/workhistory/index.html
+++ b/pages/workhistory/index.html
@@ -70,6 +70,9 @@
 			      <li class="nav-item active">
 			        <a class="nav-link" href="/pages/workhistory">Work History</a>
 			      </li>
+				  <li class="nav-item">
+			        <a class="nav-link" href="/pages/achievements/">Achievements</a>
+			      </li>
 			      <!-- <li class="nav-item">
 			        <a class="nav-link" href="/pages/projects">Projects</a>
 			      </li> -->
