--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						<h2 class="headTopic"> Hi There !</h2>	
 						<div class="horizontal-divider hidden-xs"></div>
 						<p class="mt-4"> <b>
-							My name is <font color="red">Rishi</font>. I make things for money and for fun.<br/>
+							My name is <font color="red">Rishi</font>. I make and learn things for the love of Computer Science.<br/>
 							I am a Product Engineer, Designer and a wanderer. <br/>
 							I want to work on exciting cutting edge technologies.
 						</b></p>
